err/npdb.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/npdb'...
Listing './lib/python3.5/site-packages/npdb/core'...
Compiling './lib/python3.5/site-packages/npdb/core/core.py'...
***   File "./lib/python3.5/site-packages/npdb/core/core.py", line 54
    raise RuntimeError, "Disk allocation failed. {}".format(e)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/npdb/creation'...
Listing './lib/python3.5/site-packages/npdb/indexing'...
Compiling './lib/python3.5/site-packages/npdb/indexing/indexing.py'...
***   File "./lib/python3.5/site-packages/npdb/indexing/indexing.py", line 74
    raise TypeError, "dbarray index of unsupported type"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/npdb/linalg'...
Listing './lib/python3.5/site-packages/npdb/manipulation'...
Listing './lib/python3.5/site-packages/npdb/math'...
Listing './lib/python3.5/site-packages/npdb/random'...
Listing './lib/python3.5/site-packages/npdb/sorting'...
Listing './lib/python3.5/site-packages/npdb/statistics'...
Listing './lib/python3.5/site-packages/npdb-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
